--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,6 @@
 /*=======================================
     BREAKPOINTS
 =========================================*/
+.carro {
+  padding:20px
+}
