--- a/src/index.css
+++ b/src/index.css
@@ -17,309 +17,79 @@
   Heading sizes...........................Font sizing for page headings
 
   BREAKPOINTS
-  Breakpoints.............................Global responsive breakpoints definitions
+ Breakpoints.............................Global responsive breakpoints definitions
 */
-
-/*=======================================
-    COLORS
-=========================================*/
-
-/*=======================================
-    TYPOGRAPHY
-=========================================*/
-/* 
-  1. The Poppins font. This is the main font.
-  https://fonts.googleapis.com/css?family=Poppins
-
-  2. The Courier font. This is used for <pre> code.
-  https://fonts.googleapis.com/css?family=Poppins
-*/
-
-/*=======================================
-    BREAKPOINTS
-=========================================*/
 
 :root {
-  --base-font: 20px;
+  /*=======================================
+    COLORS
+  =========================================*/
+
+  /*=========================
+    Brand Colors
+  ==========================*/
+  --primary: #2292b1;
+  --gradient-start: #1b3385;
+  --gradient-end: #25c5c9;
+
+  /*=========================
+    Neutral Colors
+  ==========================*/
+  --background: #0a0c11;
+  --body-text: #abadb3;
+  --border-color: #323438;
+  --sub-menu-bg: #222;
+  --white: #fff;
+
+  /*=========================
+    Utility Colors
+  ==========================*/
+
+  /*=======================================
+    TYPOGRAPHY
+  =========================================*/
+  /* 
+    1. The Poppins font. This is the main font.
+    https://fonts.googleapis.com/css?family=Poppins
+    2. The Courier font. This is used for <pre> code.
+    https://fonts.googleapis.com/css?family=Poppins
+  */
+
+  /*=========================
+    Font famillies
+  ==========================*/
   --primary-font: "Poppins";
-  --secondary-font: "Courier";
-  --white: #ffff;
-  --primary-bg: #0a0c11;
-  --primary-text: #abadb3;
-  --primary-color: #2292b1;
-  --start-gradient: #1b3385;
-  --end-gradient: #25c5c9;
-  --link-color: #abadb3;
-  --hover-color: #2292b1;
-  --sub-menu-color: #222;
-  --border-color: #313438;
-  --normal: 400;
-  --medium: 500;
-  --semi-bold: 600;
-  --bold: 700;
-  /* --thin: 100;
+
+  /*=========================
+  Font weights
+  ==========================*/
+  --thin: 100;
   --extra-light: 200;
   --light: 300;
-  --extra-bold: 800;
-  --heavy: 900;*/
-}
-
-body {
-  box-sizing: border-box;
-  font-family: var(--primary-font);
-  font-size: var(--base-font);
-  color: var(--primary-text);
-  background-color: var(--primary-bg);
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: var(--primary-font);
-  font-weight: var(--medium);
-  color: var(--white);
-  margin: 0;
-}
-
-h1 {
-  font-size: 4em;
-  font-weight: var(--medium);
-  line-height: 1.5em;
-}
-
-h2 {
-  font-size: 2em;
-  font-weight: var(--medium);
-  line-height: 2.85em;
-}
-
-h3 {
-  font-size: 1.47em;
-  font-weight: var(--medium);
-  line-height: 1.92em;
-}
-
-h4 {
-  font-size: 1.4em;
-  font-weight: var(--bold);
-  line-height: 2.1em;
-}
-
-h5 {
-  font-size: 1.2em;
-  font-weight: var(--bold);
-  line-height: 1.6em;
-}
-
-h6 {
-  font-size: 1.44em;
-  font-weight: var(--semi-bold);
-  line-height: 1.4em;
-}
-
-.lowlight {
-  opacity: 0.5;
-}
-
-a {
-  color: var(--primary-text);
-  text-decoration: none;
-  font-size: 0.9em;
-  font-style: normal;
-  font-weight: var(--normal);
-  line-height: 2.4em;
-  text-transform: capitalize;
-}
-
-ul {
-  list-style-type: none;
-  display: flex;
-  padding: 0;
-}
-
-a:hover,
-.logo:hover {
-  color: var(--hover-color);
-}
-
-header {
-  display: flex;
-  width: 100%;
-  margin: 0 auto;
-  height: 120px;
-  padding-left: 90px;
-  padding-right: 100px;
-}
-
-header * {
-  flex: 1;
-}
-
-.logo {
-  font-weight: var(--bold);
-  font-size: 1.6em;
-  color: var(--white);
-}
-
-.selection {
-  color: var(--hover-color);
-}
-
-.nav li {
-  margin: 0 18px;
-}
-
-.nav li:nth-child(2) ul {
-  display: none;
-}
-
-.nav li:nth-child(2) {
-  position: relative;
-  min-width: 110px;
-}
-
-.nav li:nth-child(2):hover ul {
-  display: block;
-}
-
-.ul-nav {
-  position: absolute;
-  top: 44px;
-  left: -20px;
-  z-index: 99;
-}
-
-.ul-nav li {
-  width: 235px;
-  height: 44px;
-  background-color: var(--sub-menu-color);
-  border-bottom: 1px solid var(--border-color);
-  padding-left: 23px;
-}
-
-.ul-nav a {
-  font-size: 0.75em;
-  font-weight: var(--normal);
-}
-
-.social {
-  justify-content: flex-end;
-}
-
-.social li {
-  flex: 0;
-  padding: 0 15px;
-  position: relative;
-}
-
-.circle {
-  width: 42px;
-  height: 42px;
-  border-radius: 50%;
-  position: absolute;
-  top: -2px;
-  left: 4px;
-}
-
-.circle:hover {
-  background-color: rgba(255, 255, 255, 0.15);
-}
-
-/* main */
-.main-box {
-  width: 750px;
-  margin: 0 auto;
-  text-align: center;
-  padding-top: 30px;
-  padding-bottom: 70px;
-}
-
-.main-box p {
-  margin-bottom: 50px;
-  font-size: 1.2em;
-  font-weight: var(--light);
-}
-
-.cta {
-  border-radius: 30px;
-  background: linear-gradient(
-    90deg,
-    var(--start-gradient) 0%,
-    var(--end-gradient) 100%
-  );
-  border: 0;
-  height: 60px;
-  font-size: 0.9em;
-  font-weight: var(--bold);
-  text-transform: capitalize;
-  color: var(--white);
-  padding: 15px 35px;
-  text-align: center;
-}
-
-.cta:hover {
-  color: var(--primary-bg);
-  background: var(--white);
-}
-
-/*.cta {
-  padding: 15px 34.86px 16.08px 35px;
-  background: linear-gradient(
-    to right,
-    var(--gradient-start) 0%,
-    var(--gradient-end) 100%
-  );
-  border-radius: 1.5em;
-  border: none;
-  color: var(--white);
-  font-family: var(--primary-font);
-  font-weight: var(--bold);
-  font-size: 0.9em;
-  line-height: 1.404em;
-  margin-top: 0.8em;
-  text-transform: capitalize;
-}
-
-.video-box {
-  margin: 30px 60px 0;
-}*/
-
-
-/*:root {
-  --base-font: 20px;
-  --primary-font: "Poppins";
-  --secondary-font: "Courier";
-  --white: #ffff;
-  --primary-bg: #0a0c11;
-  --primary-text: #abadb3;
-  --primary-color: #2292b1;
-  --start-gradient: #1b3385;
-  --end-gradient: #25c5c9;
-  --link-color: #abadb3;
-  --hover-color: #2292b1;
-  --sub-menu-color: #222;
-  --border-color: #313438;
   --normal: 400;
   --medium: 500;
   --semi-bold: 600;
   --bold: 700;
+  --extra-bold: 800;
+  --heavy: 900;
+
+  /*=========================
+  Sizes
+  ==========================*/
+  --base-font: 20px;
 }
 
+/*=======================================
+    RESETS
+=========================================*/
 body {
   box-sizing: border-box;
   font-family: var(--primary-font);
   font-size: var(--base-font);
-  color: var(--primary-text);
-  background-color: var(--primary-bg);
+  color: var(--body-text);
+  background: var(--background);
+  margin: 0;
+  padding: 0;
 }
 
 *,
@@ -328,12 +98,9 @@ body {
   box-sizing: inherit;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
+/*=========================
+  Heading Sizes
+==========================*/
 h1,
 h2,
 h3,
@@ -347,53 +114,31 @@ h6 {
 }
 
 h1 {
-  font-size: 4em;
-  font-weight: var(--medium);
-  line-height: 1.5em;
+  font-size: 2.1em;
+  line-height: 1.72em;
 }
 
 h2 {
-  font-size: 2em;
-  font-weight: var(--medium);
-  line-height: 2.85em;
+  font-size: 1.6em;
+  line-height: 1.29em;
+  text-transform: capitalize;
+  margin-top: 14px;
 }
 
 h3 {
-  font-size: 1.47em;
-  font-weight: var(--medium);
-  line-height: 1.92em;
-}
-
-h4 {
-  font-size: 1.4em;
+  font-size: 1.6em;
   font-weight: var(--bold);
-  line-height: 2.1em;
 }
 
+h4,
 h5 {
-  font-size: 1.2em;
   font-weight: var(--bold);
-  line-height: 1.6em;
 }
 
 h6 {
-  font-size: 1.44em;
   font-weight: var(--semi-bold);
-  line-height: 1.4em;
-}
-
-.lowlight {
-  opacity: 0.5;
-}
-
-a {
-  color: var(--primary-text);
-  text-decoration: none;
-  font-size: 0.9em;
-  font-style: normal;
-  font-weight: var(--normal);
-  line-height: 2.4em;
-  text-transform: capitalize;
+  font-size: 16px;
+  color: var(--body-text);
 }
 
 ul {
@@ -402,197 +147,284 @@ ul {
   padding: 0;
 }
 
-a:hover,
-.logo:hover {
-  color: var(--hover-color);
-}
-
-header {
-  display: flex;
-  width: 100%;
-  margin: 0 auto;
-  height: 120px;
-  padding-left: 90px;
-  padding-right: 100px;
-}
-
-header * {
-  flex: 1;
-}
-
-.logo {
-  font-weight: var(--bold);
-  font-size: 1.6em;
-  color: var(--white);
-}
-
-.selection {
-  color: var(--hover-color);
-}
-
-.nav-header li {
-  margin: 0 18px;
-}
-
-.nav-header li:nth-child(2) ul {
-  display: none;
-}
-
-.nav-header li:nth-child(2) {
-  position: relative;
-  min-width: 110px;
-}
-
-.nav-header li:nth-child(2):hover ul {
-  display: block;
-}
-
-.ul-nav-header {
-  position: absolute;
-  top: 44px;
-  left: -20px;
-  z-index: 99;
-}
-
-.ul-nav-header li {
-  width: 235px;
-  height: 44px;
-  background-color: var(--sub-menu-color);
-  border-bottom: 1px solid var(--border-color);
-  padding-left: 23px;
-}
-
-.ul-nav-header a {
-  font-size: 0.75em;
-  font-weight: var(--normal);
-}
-
-.social {
-  justify-content: flex-end;
-}
-
-.social li {
-  flex: 0;
-  padding: 0 15px;
-  position: relative;
-}
-
-
-
 ul li {
-  display: inline-block;
   position: relative;
 }
 
-
-
-.cta {
-  margin: 18.75em 30.65em 1.75em;
-  background: linear-gradient(
-    to right,
-    var(--gradient-start) 0%,
-    var(--gradient-end) 100%
-  );
-
-  border-radius: 1.5em;
-  border: none;
-  color: var(--white);
-  font-family: var(--primary-font);
-  font-weight: var(--bold);
-  font-size: 0.9em;
-  line-height: 1.404em;
-  margin-top: 0.8em;
-  padding: 0.75em 1.73em 0.8039em 1.75em;
-
-  text-transform: capitalize;
+figure {
+  margin: 0;
+  padding: 0;
 }
 
-.cta:hover {
-  opacity: 0.5;
-  -moz-opacity: 0.5;
-  filter: alpha (opacity=50);
-}
-.cta a {
-  color: #fff;
-  text-decoration: none;
-  padding: 5px 5px 5px 0;
+img {
+  width: 100%;
 }
 
 a {
-  color: var(--bodytext);
-  font-family: var(--primary-font);
+  color: var(--body-text);
   text-decoration: none;
+  font-size: 0.9em;
+  font-style: normal;
+  font-weight: var(--normal);
+  line-height: 2.4em;
+  text-transform: capitalize;
 }
 
-p {
-  font-family: var(--primary-font);
-  font-size: 0.9375rem;
-  line-height: 1.4875rem;
-  text-align: center;
+a:hover,
+.logo h2:hover {
+  color: var(--primary);
+}
+
+.lowlight {
+  opacity: 0.5;
+}
+
+.gradient-button {
+  padding: 15px 34.86px 16.08px 35px;
+  display: inline-block;
+  margin-top: 14px;
+  color: var(--white);
+  border-radius: 30px;
+  font-size: 0.9em;
+  font-weight: var(--bold);
+  line-height: 1.6em;
+  background: linear-gradient(
+    90deg,
+    var(--gradient-start) 0%,
+    var(--gradient-end) 100%
+  );
+}
+
+.gradient-button:hover {
+  background: var(--white);
+  color: var(--background);
+}
+
+/*=======================================
+    Mobile First
+=========================================*/
+.blocks {
+  padding: 0 30px;
 }
 
 header {
-  background-color: var(--primary-bg);
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-  padding: 28px;
-  margin: 21px 28px 21px 21px;
-}
-
-.nav li ul {
-  display: none;
-  background-color: var(--white);
-  position: absolute;
-  left: 0%;
-  top: 100%;
-  padding: 0%;
-}
-
-.nav li a {
-  font-family: var(--primary-font);
-  color: var(--white);
-  font-size: 1em;
-  padding: 0.8em 1.325em;
-  text-decoration: none;
-  line-height: 1.5em;
-}
-
-nav ul li:hover {
-  background: #2292b1;
-}
-
-.main section {
-  width: 760px;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.logo {
-  font-family: var(--primary-font);
-  font-weight: var(--bold);
-  font-size: 2em;
-  color: var(--white);
-}
-
-.social {
   display: flex;
   align-items: center;
 }
 
-.nav {
-  align-items: baseline;
+.logo {
+  flex: 3;
 }
 
-.lowhight {
-  opacity: 0.5;
+.mobile {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
 }
 
-.hero-container {
-  justify-content: space-between;
+.mobile img {
+  width: 16px;
 }
 
-.nav li:hover ul {
-  display: block;
-  background-color: #0a0c11;
-}*/
+.desktop {
+  display: none;
+}
+
+.submenu {
+  display: none;
+}
+
+.social {
+  flex: 3;
+  display: flex;
+  justify-content: center;
+}
+
+.social ul {
+  column-gap: 25px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  padding: 42px 0;
+  margin: 0 auto;
+}
+
+main > * {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.hero-tagline {
+  margin-top: 24px;
+}
+
+.hero-cta {
+  margin-top: 14px;
+}
+
+.hero-video video {
+  width: 100%;
+  max-width: 100%;
+  max-height: 600px;
+  object-fit: cover;
+}
+
+/* .our-services *,
+.big-numbers * {
+  border: 1px solid var(--body-text);
+} */
+
+.our-services {
+  margin: 42px 0;
+}
+
+.big-numbers {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-bottom: 42px;
+}
+
+.number-box {
+  display: flex;
+  flex-direction: column;
+}
+
+.number-box > * {
+  display: flex;
+  justify-content: center;
+}
+
+/*=======================================
+    TABLET & DESKTOP BREAKPOINTS
+=========================================*/
+@media all and (min-width: 479px) and (max-width: 1280px) {
+}
+
+@media all and (min-width: 479px) {
+  .selected {
+    color: var(--primary);
+  }
+
+  .circle {
+    width: 42px;
+    height: 42px;
+    border-radius: 50%;
+    position: absolute;
+    left: -11px;
+    top: -2px;
+  }
+
+  .circle:hover {
+    background: rgba(255, 255, 255, 0.25);
+  }
+
+  .blocks {
+    padding: 0 88px;
+  }
+
+  .hero {
+    padding: 0 85px;
+  }
+
+  .logo {
+    flex: 1;
+  }
+
+  .logo h2 {
+    font-size: 32px;
+    font-weight: 700;
+  }
+
+  .mobile {
+    display: none;
+  }
+
+  .desktop {
+    flex: 3;
+    display: flex;
+    justify-content: center;
+  }
+
+  .desktop ul {
+    column-gap: 35px;
+  }
+
+  .desktop ul li:nth-child(2) img {
+    width: 16px;
+  }
+
+  .desktop ul li {
+    position: relative;
+  }
+
+  .desktop ul li:nth-child(2):hover .submenu {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .submenu {
+    width: 230px;
+    background-color: var(--sub-menu-bg);
+    z-index: 99;
+  }
+
+  .submenu li {
+    min-width: 100%;
+    padding-left: 20px;
+    border: 1px solid var(--border-color);
+  }
+
+  .submenu li:hover {
+    padding-left: 30px;
+  }
+
+  .social {
+    flex: 1;
+  }
+
+  h1 {
+    font-size: 4em;
+    line-height: 1.72em;
+  }
+
+  h3 {
+    font-size: 2.27em;
+  }
+
+  main {
+    max-width: 760px;
+    /* padding: 70px 320px; */
+  }
+
+  .our-services {
+    display: flex;
+    margin: 131px 0;
+  }
+
+  .big-numbers {
+    flex-direction: row;
+    gap: 40px;
+    padding: 0 80px;
+    margin-bottom: 131px;
+  }
+
+  .big-numbers > * {
+    flex: 1;
+  }
+
+  .our-services > * {
+    flex: 1;
+  }
+  .our-services-layout {
+    padding: 0 12%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+  }
+}
