--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
   Heading sizes...........................Font sizing for page headings
 
   BREAKPOINTS
- Breakpoints.............................Global responsive breakpoints definitions
+  Breakpoints.............................Global responsive breakpoints definitions
 */
 
 :root {
@@ -51,6 +51,7 @@
   /* 
     1. The Poppins font. This is the main font.
     https://fonts.googleapis.com/css?family=Poppins
+
     2. The Courier font. This is used for <pre> code.
     https://fonts.googleapis.com/css?family=Poppins
   */
@@ -170,6 +171,27 @@ a {
   text-transform: capitalize;
 }
 
+hr {
+  position: absolute;
+  text-align: start;
+}
+
+.boxes a:hover {
+  color: var(--primary);
+}
+
+.boxes h2 {
+  font-family: var(--primary-font);
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 34.32px;
+}
+
+/*.boxes {
+  border: 2px solid var(--body-text);
+}*/
+
 a:hover,
 .logo h2:hover {
   color: var(--primary);
@@ -272,11 +294,6 @@ main > * {
   object-fit: cover;
 }
 
-/* .our-services *,
-.big-numbers * {
-  border: 1px solid var(--body-text);
-} */
-
 .our-services {
   margin: 42px 0;
 }
@@ -297,6 +314,26 @@ main > * {
   display: flex;
   justify-content: center;
 }
+
+/*=========================
+  Feature Container
+==========================*/
+
+.feature-container-layout {
+  border: 1 solid var(--body-text);
+}
+
+.boxes a:hover {
+  color: var(--primary);
+}
+
+/*.boxes {
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+  padding: 44px;
+  align-items: flex-start;
+}*/
 
 /*=======================================
     TABLET & DESKTOP BREAKPOINTS
@@ -426,5 +463,17 @@ main > * {
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+  }
+
+  /*=======================================
+    TABLET & DESKTOP BREAKPOINTS
+=========================================*/
+  .feature-container-layout {
+    flex-direction: row;
+    gap: 44px;
+  }
+
+  .feature-container-layout {
+    flex: 1;
   }
 }
