--- a/src/index.css
+++ b/src/index.css
@@ -131,20 +131,27 @@ h3 {
   font-weight: var(--bold);
 }
 
-h4,
+h4 {
+  font-size: 1.2em;
+  line-height: 1.72em;
+}
+
 h5 {
-  font-weight: var(--bold);
+  font-size: 0.9em;
+  font-weight: var(--semi-bold);
+  line-height: 1rem;
 }
 
 h6 {
   font-weight: var(--semi-bold);
-  font-size: 16px;
+  font-size: 0.8em;
   color: var(--body-text);
 }
 
 ul {
   list-style-type: none;
   display: flex;
+  flex-direction: row;
   padding: 0;
 }
 
@@ -170,27 +177,6 @@ a {
   line-height: 2.4em;
   text-transform: capitalize;
 }
-
-hr {
-  position: absolute;
-  text-align: start;
-}
-
-.boxes a:hover {
-  color: var(--primary);
-}
-
-.boxes h2 {
-  font-family: var(--primary-font);
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 34.32px;
-}
-
-/*.boxes {
-  border: 2px solid var(--body-text);
-}*/
 
 a:hover,
 .logo h2:hover {
@@ -309,35 +295,136 @@ main > * {
   display: flex;
   flex-direction: column;
 }
-
 .number-box > * {
   display: flex;
   justify-content: center;
 }
 
-/*=========================
-  Feature Container
-==========================*/
+/*=======================================
+    FEATURED CONTENT
+=========================================*/
 
-.feature-container-layout {
-  border: 1 solid var(--body-text);
-}
-
-.boxes a:hover {
-  color: var(--primary);
-}
-
-/*.boxes {
+.featured-content-layout {
   display: flex;
   flex-direction: column;
-  gap: 35px;
+  gap: 44px;
+}
+
+.featured-content {
+  text-align: center;
+}
+
+.box a {
+  position: relative;
+}
+
+hr {
+  position: absolute;
+  top: 17px;
+  text-align: start;
+  border: 1px solid var(--gradient-end);
+  width: 95px;
+}
+.boxes-container {
+  display: flex;
+  flex-direction: column;
+  gap: 39.9px;
+}
+
+.boxes-container .box {
   padding: 44px;
-  align-items: flex-start;
-}*/
+  border: 2px solid var(--border-color);
+}
+
+/*=======================================
+    Promotional Contact
+=========================================*/
+
+/* .promotional-contact-layout * {
+  border: 1px solid var(--body-text);
+} */
+
+.promotional-contact-layout {
+  display: flex;
+  position: relative;
+  padding: 42px 28px;
+  margin-top: 120px;
+  margin-bottom: 160px;
+}
+.promotional-contact {
+  text-align: center;
+  width: 100%;
+  position: relative;
+  z-index: 1;
+}
+
+.promotional-contact .rectangle {
+  object-fit: cover;
+  overflow: hidden;
+}
+
+.promotional-contact-layout a {
+  margin-top: 35px;
+}
+
+.overlay {
+  opacity: 0.6;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.promotional-contact-layout img {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  margin: 0;
+  padding: 0;
+  object-fit: cover;
+  z-index: 0;
+}
+
+/*=======================================
+    Footer
+=========================================*/
+/* footer > * {
+  border: 1px solid var(--body-text);
+} */
+
+.footer-content {
+  display: flex;
+  flex-direction: column;
+}
+
+footer section:first-child {
+  flex: 1;
+}
+
+footer section:last-child {
+  flex: 2;
+}
+
+.links ul {
+  flex-direction: column;
+}
+
+.social {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.copyright {
+  font-size: 0.65em;
+}
 
 /*=======================================
     TABLET & DESKTOP BREAKPOINTS
 =========================================*/
+
 @media all and (min-width: 479px) and (max-width: 1280px) {
 }
 
@@ -465,15 +552,19 @@ main > * {
     justify-content: center;
   }
 
-  /*=======================================
-    TABLET & DESKTOP BREAKPOINTS
-=========================================*/
-  .feature-container-layout {
-    flex-direction: row;
+  .featured-content-layout {
     gap: 44px;
   }
 
-  .feature-container-layout {
+  .featured-content-layout > * {
     flex: 1;
+  }
+
+  .boxes-container {
+    flex-direction: row;
+  }
+
+  .promotional-contact-layout {
+    padding: 66px 44px;
   }
 }
